rendered/envs/friclu/pushgateway/deployment-pushgateway-prometheus-pushgateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: pushgateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prometheus-pushgateway
    app.kubernetes.io/version: v1.11.1
    helm.sh/chart: prometheus-pushgateway-3.4.1
  name: pushgateway-prometheus-pushgateway
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: pushgateway
      app.kubernetes.io/name: prometheus-pushgateway
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: pushgateway
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: prometheus-pushgateway
        app.kubernetes.io/version: v1.11.1
        helm.sh/chart: prometheus-pushgateway-3.4.1
    spec:
      automountServiceAccountToken: true
      containers:
        - image: quay.io/prometheus/pushgateway:v1.11.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9091
            initialDelaySeconds: 10
            timeoutSeconds: 10
          name: pushgateway
          ports:
            - containerPort: 9091
              name: metrics
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9091
            initialDelaySeconds: 10
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /data
              name: storage-volume
              subPath: ""
      securityContext:
        fsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
      serviceAccountName: pushgateway-prometheus-pushgateway
      volumes:
        - emptyDir: {}
          name: storage-volume
