rendered/envs/friclu/pushgateway/service-pushgateway-prometheus-pushgateway.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: pushgateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prometheus-pushgateway
    app.kubernetes.io/version: v1.11.1
    helm.sh/chart: prometheus-pushgateway-3.4.1
  name: pushgateway-prometheus-pushgateway
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 9091
      protocol: TCP
      targetPort: 9091
  selector:
    app.kubernetes.io/instance: pushgateway
    app.kubernetes.io/name: prometheus-pushgateway
  type: ClusterIP
